--- a/ios_facts2.yml
+++ b/ios_facts2.yml
@@ -12,4 +12,5 @@
   tasks:
     - name: gather router facts
       cisco.ios.facts:
-        gather_subset: all
+        gather_subset:
+          - config
