--- a/ios_backup.yml
+++ b/ios_backup.yml
@@ -1,7 +1,20 @@
-- name: configurable backup path
-  cisco.ios.ios_config:
-    src: ios_template.j2
-    backup: yes
-    backup_options:
-      filename: backup.cfg
-      dir_path: /home/user
+---
+
+- name: Backup IOS Devices
+  hosts: all
+  vars:
+    ansible_become: true
+    ansible_become_method: enable
+    ansible_connection: network_cli
+    ansible_network_os: ios
+  gather_facts: no
+
+  tasks:
+    - name: gather router facts
+      cisco.ios.facts:
+    - name: Backup Device
+      cisco.ios.ios_config:
+        backup: yes
+        backup_options:
+         filename: backup.cfg
+         dir_path: /home/msabo/
